--- a/message_in_a_bottle/android/app/src/main/AndroidManifest.xml
+++ b/message_in_a_bottle/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+<uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+<uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:label="message_in_a_bottle"
         android:name="${applicationName}"
