--- a/message_in_a_bottle/pubspec.yaml
+++ b/message_in_a_bottle/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  flutter_map: ^6.1.0
+  geolocator: ^11.0.0
+  flutter_map_location_marker: ^8.0.8
+  provider: ^6.1.2
+  latlong2: ^0.9.1
 
 dev_dependencies:
   flutter_test:
