--- a/message_in_a_bottle/pubspec.yaml
+++ b/message_in_a_bottle/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_map_location_marker: ^8.0.8
   provider: ^6.1.2
   latlong2: ^0.9.1
+  firebase_core: ^2.30.0
+  firebase_auth: ^4.19.2
 
 dev_dependencies:
   flutter_test:
