--- a/message_in_a_bottle/pubspec.yaml
+++ b/message_in_a_bottle/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   latlong2: ^0.9.1
   firebase_core: ^2.30.0
   firebase_auth: ^4.19.2
+  cloud_firestore: ^4.17.0
 
 dev_dependencies:
   flutter_test:
