--- a/message_in_a_bottle/pubspec.yaml
+++ b/message_in_a_bottle/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_core: ^2.30.0
   firebase_auth: ^4.19.2
   cloud_firestore: ^4.17.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
