--- a/message_in_a_bottle/pubspec.yaml
+++ b/message_in_a_bottle/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_core: ^2.30.0
   firebase_auth: ^4.19.2
   cloud_firestore: ^4.17.0
+  geocode: 1.0.3
+
 
 dev_dependencies:
   flutter_test:
