--- a/message_in_a_bottle/pubspec.yaml
+++ b/message_in_a_bottle/pubspec.yaml
@@ -80,6 +80,7 @@ flutter:
   assets:
       - images/LoginBackGround.png
       - assets/message_in_a_bottle.png
+      - assets/MapBackGround.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
