--- a/message_in_a_bottle/pubspec.yaml
+++ b/message_in_a_bottle/pubspec.yaml
@@ -78,8 +78,8 @@ flutter:
   
   # To add assets to your application, add an assets section, like this:
   assets:
-      - images/LoginBackGround.png
-      - assets/message_in_a_bottle.png
+      - images/
+      - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
